Fix word wrapping inside code blocks

--- a/pdf/assets/pdf-style.css
+++ b/pdf/assets/pdf-style.css
@@ -701,11 +701,21 @@
 .markdown-body hr {
 	border-bottom-color: #eee
 }
-.image-name-tag {
+.markdown-body .image-name-tag {
 	border-radius: 50px;
 	color: white;
 	background-color:#00C6F9;
 	font-size: 10px;
 	padding: 4px 8px;
 	text-align:center;
+	margin: 5px;
+}
+
+.markdown-body pre {
+	white-space: pre-wrap;
+	word-wrap: break-word;
+}
+.markdown-body pre>code {
+	white-space: pre-wrap;
+	word-wrap: break-word;
 }
